2007-09-09  Bruno coudoin  <bruno.coudoin@free.fr>

	* Makefile.am: no more distribute an rpm spec file
	* gcompris.spec.in: deleted

	*** RELEASE 8.4 ***

2007-09-06  Bruno Coudoin  <bruno.coudoin@free.fr>

	* src/boards/memory.c: space sound 2 was twice in the list. If they were
	  both selected in the game, the children was proposed the same sound
	  in 4 spot making the game bugged.

	* src/boards/python/login.py: fixed a little bug, in text entry mode
	  it was not displayed again if you open/close the help.

2007-09-01  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/skins/babytoy/button_large3.png: created a larger button from button_large.png
	* boards/skins/gartoon/button_large3.png: created a larger button from button_large.png
	* src/boards/shapegame.c: (shapegame_init_canvas): use the larger button
	* boards/doubleentry/board3_0.xml.in: fixed a typo, A3 was not working

2007-09-01  Bruno coudoin  <bruno.coudoin@free.fr>

	* Makefile.am: Fixed not to use bruno's svn account

2007-08-31  Bruno coudoin  <bruno.coudoin@free.fr>

	Now all voices are in a separated svn module.
	The voices must now be put under boards/voices/<locale> instead of
	boards/sounds/<locale>

	To get the voices installed in the proper place, simply run:
	make update-voices

	* Makefile.am:
	* boards/click_on_letter.xml.in:
	* boards/doubleentry/board3_0.xml.in:
	* boards/geography.xml.in:
	* boards/geography/board1_0.xml.in:
	* boards/geography/board2_0.xml.in:
	* boards/geography/board2_1.xml.in:
	* boards/geography/board3_0.xml.in:
	* boards/geography/board3_1.xml.in:
	* boards/geography/board4_0.xml.in:
	* boards/geography/board4_1.xml.in:
	* boards/geography/board4_2.xml.in:
	* boards/geography_country.xml.in:
	* boards/geography_country/board1_0.xml.in:
	* create_dist_sounds:
	* src/boards/algebra.c: (algebra_create_item):
	* src/boards/click_on_letter.c: (repeat), (sounds_are_fine),
	(click_on_letter_next_level), (config_start):