@@ -3,7 +3,7 @@ Encoding=UTF-8
 Name=GCompris Administration
 _Comment=Administration for gcompris
 Exec=gcompris -a --nolockcheck
-Icon=gcompris-edit.png
+Icon=gcompris-edit
 Terminal=false
 Type=Application
 Categories=Education;
