@@ -4,7 +4,7 @@ _Name=Educational suite GCompris
 _GenericName=Multi-activity educational game
 _Comment=Educational game for ages 2 to 10
 Exec=gcompris
-Icon=gcompris.png
+Icon=gcompris
 Terminal=false
 Type=Application
 Categories=Game;KidsGame;
