@@ -1,3 +1,14 @@
+2007-09-10  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	- removed unmaitained spec file
+	- fixed menu file not to include icon extension
+	- fixed bug#475301 missing freetype includes to compile libgnomecanvas
+
+	* configure.in:
+	* gcompris-edit.desktop.in:
+	* gcompris.desktop.in:
+	* src/libgnomecanvas/Makefile.am:
+
 2007-09-09  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	* Makefile.am: no more distribute an rpm spec file
